--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -5,7 +5,7 @@ title: "JLU-lwk"
 lang: "zh" #语言设置 zh表示中文 en 表示英语
 name: "李万堃"
 jobtitle: "Wankun Li" #可空不显示
-photo: "assets/img/WankunLi.jpeg" #照片可空，不显示
+photo: "assets/img/wankun.jpg" #照片可空，不显示
 
 #联系方式
 contact: #联系方式连接等3~5行
